<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/menu_explore" android:title="@string/find"
            android:icon="@mipmap/menu_icon_explore" android:checked="true"/>
        <item android:id="@+id/menu_mine" android:title="@string/mine"
            android:icon="@mipmap/menu_icon_my"/>
        <item android:id="@+id/menu_language" android:title="@string/language"
            android:icon="@mipmap/menu_icon_language"/>
        <item android:id="@+id/menu_shake" android:title="@string/shake"
            android:icon="@mipmap/menu_icon_shark"/>

    </group>

    <item android:id="@+id/drawer_other" android:title="@string/other">

    <menu>

        <item android:id="@+id/menu_change_theme" android:title="@string/change_theme"/>

        <item android:id="@+id/menu_setting" android:title="@string/setting"/>

    </menu>

    </item>


</menu>